@@ -12,7 +12,10 @@
 - module XML: Added new flag which allows to ignore an <include> tag
 - added doc/STYLE
 - changed some function definition to comply to the STYLE odcument
-
+- changed name of function GWEN_Md_Hash and GWEN_Md_UnregisterAllProviders
+  to GWEN_MD_Hash and GWEN_MD_UnregisterAllProviders, according to
+  my own style guid :-}
+  
 
 2003-12-28  Christian Stimming  <stimming@tuhh.de>
 
